[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tradingagents"
version = "0.1.0"
description = "Multi-agent LLM-powered trading framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "TauricResearch", email = "" }
]

keywords = ["trading", "agents", "llm", "finance", "ai"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4.20",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

enterprise = [
    "redis>=5.0.0",
    "celery>=5.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
tradingagents = "tradingagents.cli:app"

[project.urls]
Homepage = "https://github.com/TauricResearch/TradingAgents"
Repository = "https://github.com/TauricResearch/TradingAgents"
Issues = "https://github.com/TauricResearch/TradingAgents/issues"
Changelog = "https://github.com/TauricResearch/TradingAgents/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingagents*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov installed
# -s to show print statements while I'm poking around/debugging
addopts = "-v -s"

[tool.coverage.run]
source = ["tradingagents"]
omit = ["tests/*", "*/__init__.py"]
